# bc2

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  api.yaml  demo.sh  pipeline.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
app/docs/: app.py
app/server/: app.py  config.py
app/server/api/: api.yaml
app/server/schema/: README.md  api.yaml
bc2/: __init__.py  __main__.py  bc2.py  cache.py  config.py  document_analysis.py  extract.py  extract_pages.py  extract_pages.sh  infer.py  llm.py  logo.py  render.py  test_infer.py
bc2/core/: __init__.py  cli.py  pipeline.py  test_pipeline.py
bc2/core/analyze/: __init__.py  azuredi.py  base.py  test_azuredi.py
bc2/core/common/: __init__.py  align.py  all.py  azure_pricing.py  azureblob.py  context.py  datafile.py  file.py  infer.py  json.py  name_map.py  ontology.py  ontopainter.py  openai.py  openai_metadata.py  palette.py  pdf.py  pipe.py  preprocess.py  runtime.py  template.py  test_azure_pricing.py  test_infer.py  test_openai.py  test_pdf.py  test_resolve.py  test_template.py  test_type_util.py  test_usage.py  test_validate.py  text.py  type_util.py  types.py  usage.py  validate.py
bc2/core/control/: __init__.py  chunk.py  compose.py
bc2/core/extract/: __init__.py  azuredi.py  base.py  openai.py  raw.py  tesseract.py
bc2/core/input/: __init__.py  azureblob.py  base.py  file.py  memory.py  stdin.py
bc2/core/inspect/: __init__.py  aliases.py  annotations.py  base.py  embed.py  masked_subjects.py  placeholders.py  quality.py  replacements.py  subjects.py  test_aliases.py  test_annotations.py  test_masked_subjects.py  test_quality.py
bc2/core/ontology/: __init__.py  base.py  openai.py  test_openai.py
bc2/core/output/: __init__.py  file.py  memory.py  stdout.py
bc2/core/paint/: __init__.py  base.py  ontology.py  ontopainter.py
bc2/core/parse/: __init__.py  openai.py
bc2/prompts/: redact.txt
bc2/render/: __init__.py  backends.py  common.py  html.py  pdf.py  render.py  text.py
blind_charging_core/: __init__.py  cli.py  extract_pages.py  pipeline.py  test_pipeline.py
blind_charging_core/common/: align.py  datafile.py  extend.py  infer.py  openai.py  resolve.py  template.py  test_align.py  test_infer.py  test_openai.py  test_resolve.py  test_template.py  test_validate.py  text.py  validate.py
blind_charging_core/extract/: noop.py  raw.py
blind_charging_core/input/: azureblob.py  file.py  stdin.py
blind_charging_core/inspect/: aliases.py  annotations.py  test_aliases.py
blind_charging_core/output/: azureblob.py
blind_charging_core/parse/: base.py  noop.py  openai.py
blind_charging_core/redact/: base.py  noop.py  openai.py  test_openai.py
blind_charging_core/render/: base.py  html.py  json.py  pdf.py  rich_text.py  test_json.py  test_text.py  text.py
blind_charging_data/prompts/: parse.txt  redact.txt  resolver.txt
data/: README.md
data/prompts/: parse.txt  redact.txt
dev/: extract_pages.py  extract_pages.sh
dev/evaluate/: README.md  docs.py  evaluate_extraction.R  evaluate_parse.R  evaluate_pipeline.R  evaluate_redact.R  example.py  io.py  label.py  select_unlabeled_reports.R  utils.R
dev/improve/: bc2-client.R  bc2-demo.R  count_unique_files.py
dev/organize/: archive_labels.py  autolabel_redacted_pages.R  autolabel_redacted_pages.py  calculate_di_training_stats.sh  calculate_di_training_stats_2.sh  convert_pdf_to_jpeg.py  cost_estimate_sf.R  fix_excel_floating_point.R  generate_inventory_spreadsheet.py  inventory_generate.py  inventory_merge.R  label_redacted_pages.R  label_redacted_pages.py  organize_by_referring_agency.py  sample_triplicates_under_1gb.sh  split_and_label_pages.py
docs/: index.html
evaluate/: README.md  __init__.py  __main__.py  bbox.py  docs.py  evaluate.py  example.py  fold.py  io.py  label.py  labeled_doc.py  measure.py  model.py  render.py  sample.py  train.py
improve/: bc2-client.R  bc2-demo.ipynb
lib/blind_charging_core/: __main__.py  cache.py  cli.py  config.py  extract_pages.py  llm.py  pipeline.py  test_infer.py  test_pipeline.py
organize/: extract_documents.py  organize_by_referring_agency.py  split_and_label_pages.py
prepare/: directory_move_folders.py
(+877 files in other folders)
