[project]
authors = [
    {name = "Joe Nudell", email = "jnudell@hks.harvard.edu"},
    {name = "Alex Chohlas-Wood", email = "acw438@nyu.edu"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "azure-ai-formrecognizer==3.3.3",
    "pydantic>=2.12.2",
    "pydantic-settings==2.5.2",
    "click<9.0.0,>=8.1.6",
    "tqdm==4.66.5",
    "pypdf==5.0.0",
    "openai>=2.17",
    "reportlab==4.2.2",
    "azure-storage-blob==12.23.0",
    "azure-identity==1.25.3",
    "typer>=0.21.1",
    "python-magic<1.0.0,>=0.4.27",
    "pylibmagic<1.0.0,>=0.5.0",
    "pymupdf<2.0.0,>=1.24.10",
    "pytesseract==0.3.13",
    "jinja2<4.0.0,>=3.1.4",
    "rapidfuzz<4.0.0,>=3.10.1",
    "tiktoken<1.0.0,>=0.9.0",
]
name = "bc2"
version = "0.7.9"
description = "Race-blind charging redaction libary."
readme = "README.md"

[dependency-groups]
dev = [
    "pre-commit==3.8.0",
    "pytest==8.3.3",
    "python-jsonschema-objects<1.0.0,>=0.5.5",
    "responses<1.0.0,>=0.25.3",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["app/server/generated"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "C", "W", "B"]
ignore = ["E402"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.uv.build-backend]
data = { data = "bc2/data" }
module-name = "bc2"
module-root = ""
