[project]
authors = [
    {name = "Joe Nudell", email = "jnudell@hks.harvard.edu"},
    {name = "Alex Chohlas-Wood", email = "acw438@nyu.edu"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings==2.13.1",
    "click<9.0.0,>=8.1.6",
    "tqdm==4.67.3",
    "pypdf==6.10.2",
    "openai>=2.31",
    "reportlab==4.4.10",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.3",
    "typer>=0.21.1",
    "python-magic<1.0.0,>=0.4.27",
    "pylibmagic<1.0.0,>=0.5.0",
    "pymupdf>=1.27.2.2,<2.0.0",
    "pytesseract==0.3.13",
    "jinja2<4.0.0,>=3.1.4",
    "rapidfuzz<4.0.0,>=3.10.1",
    "tiktoken<1.0.0,>=0.9.0",
    "azure-ai-documentintelligence>=1.0.2",
]
name = "bc2"
version = "0.8.0-beta.1"
description = "Race-blind charging redaction libary."
readme = "README.md"

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "python-jsonschema-objects<1.0.0,>=0.5.5",
    "responses<1.0.0,>=0.25.3",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["app/server/generated"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "C", "W", "B"]
ignore = ["E402"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.uv.build-backend]
data = { data = "bc2/data" }
module-name = "bc2"
module-root = ""
