[project]
authors = [
    {name = "Joe Nudell", email = "jnudell@hks.harvard.edu"},
    {name = "Alex Chohlas-Wood", email = "acw438@nyu.edu"},
]
license = {text = "MIT"}
requires-python = "<3.15,>=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings==2.14.2",
    "click>=8.4.2,<9.0.0",
    "tqdm==4.68.3",
    "pypdf==6.13.3",
    "openai>=2.43.0",
    "reportlab==4.5.1",
    "azure-storage-blob==12.30.0",
    "azure-identity==1.25.3",
    "typer>=0.26.8",
    "python-magic<1.0.0,>=0.4.27",
    "pylibmagic<1.0.0,>=0.5.0",
    "pymupdf>=1.27.2.3,<2.0.0",
    "pytesseract==0.3.13",
    "jinja2<4.0.0,>=3.1.4",
    "rapidfuzz>=3.14.5,<4.0.0",
    "tiktoken<1.0.0,>=0.9.0",
    "azure-ai-documentintelligence>=1.0.2",
]
name = "bc2"
version = "0.8.3"
description = "Race-blind charging redaction libary."
readme = "README.md"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-jsonschema-objects<1.0.0,>=0.5.5",
    "responses>=0.26.1,<1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["app/server/generated"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "C", "W", "B"]
ignore = ["E402"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.uv.build-backend]
data = { data = "bc2/data" }
module-name = "bc2"
module-root = ""
